--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,24 @@
         "squizlabs/php_codesniffer": "^3"
     },
     "extra": {
-        "project-files": ["app/*"]
+        "project-files": [
+            "app/*"
+        ],
+        "project-files-installed": [
+            "app/.htaccess",
+            "app/_config.php",
+            "app/_config/blog.yml",
+            "app/_config/environmentcheck.yml",
+            "app/_config/mimevalidator.yml",
+            "app/_config/mysite.yml",
+            "app/src/Page.php",
+            "app/src/PageController.php"
+        ],
+        "public-files-installed": [
+            ".htaccess",
+            "index.php",
+            "web.config"
+        ]
     },
     "config": {
         "process-timeout": 600
