--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "silverstripe/subsites": "2.3.x-dev",
         "tractorcow/silverstripe-fluent": "4.4.x-dev",
         "silverstripe/registry": "2.2.x-dev",
-        "cwp/starter-theme": "3.0.x-dev"
+        "cwp/starter-theme": "3.0.x-dev",
+        "mateusz/composer-plugin": "dev-master"
     },
     "suggest": {
         "silverstripe/recipe-content-blocks": "Supplement the CMS with a 'content block' approach to editing"
@@ -28,11 +29,33 @@
         "squizlabs/php_codesniffer": "^3"
     },
     "extra": {
-        "project-files": ["app/*"]
+        "project-files": [
+            "app/*"
+        ],
+        "project-files-installed": [
+            "app/.htaccess",
+            "app/_config.php",
+            "app/_config/blog.yml",
+            "app/_config/environmentcheck.yml",
+            "app/_config/mysite.yml",
+            "app/src/Page.php",
+            "app/src/PageController.php"
+        ],
+        "public-files-installed": [
+            ".htaccess",
+            "index.php",
+            "web.config"
+        ]
     },
     "config": {
         "process-timeout": 600
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@git.cwp.govt.nz:mateusz/composer-plugin.git"
+        }
+    ],
     "prefer-stable": true,
     "minimum-stability": "dev"
 }
