--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "silverstripe/registry": "2.3.x-dev",
         "cwp/starter-theme": "3.2.x-dev",
         "silverstripe/mfa": "4.3.x-dev",
-        "silverstripe/totp-authenticator": "4.1.x-dev"
+        "silverstripe/totp-authenticator": "4.1.x-dev",
+        "silverstripeltd/platform-yml-builder": "^1"
     },
     "suggest": {
         "silverstripe/recipe-content-blocks": "Supplement the CMS with a 'content block' approach to editing"
@@ -49,8 +50,15 @@
         ]
     },
     "config": {
-        "process-timeout": 600
+        "process-timeout": 600,
+        "secure-http": false
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:silverstripeltd/paas-platform-yml-compiler.git"
+        }
+    ],
     "prefer-stable": true,
     "minimum-stability": "dev"
 }
