--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
 		"cwp/cwp-recipe-basic-dev": "~1.0.1@stable"
 	},
 	"config": {
-		"process-timeout": 900
+		"process-timeout": 900,
+		"platform": {
+			"php":"5.6"
+		}
 	},
 	"repositories": [
 		{
