--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
             "web.config"
         ]
     },
-    "scripts": [],
+    "scripts": {},
     "config": {
         "process-timeout": 600
     },
